service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkinstest
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/"
spec:
  selector:
    app: jenkinstest
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
